# phd-finance-sim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: sp500_quarterly_returns.csv
scripts/: fetch_sp500_history.py
src/phd_finance_sim/: __init__.py  api.py  cli.py  config.py  history.py  simulation.py
src/phd_finance_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/phd_finance_sim/static/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_history.py  test_simulation.py
