[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-finance-sim"
version = "0.1.0"
description = "Quarterly withdrawal simulator for a PhD non-work period."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "numpy>=2.3,<3.0",
  "pandas>=2.3,<3.0",
  "uvicorn>=0.35,<1.0",
  "yfinance>=0.2.65,<0.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]

[project.scripts]
phd-finance-sim = "phd_finance_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
phd_finance_sim = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
